--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
+    "next-cors": "^1.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
