--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "next-cors": "^1.0.0",
     "react": "^18",
     "react-dom": "^18"
