--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@awaitjs/express": "^0.9.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "formidable": "^3.5.1",
     "mongoose": "^8.2.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "next-cors": "^1.0.0",
