--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.6.0",
     "formidable": "^3.5.1",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
